--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,7 @@ name = "eloquence-64"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.13-32"
+dependencies = [
+    "pyinstaller>=6.17.0",
+]
