--- a/manifest.ini
+++ b/manifest.ini
@@ -1,6 +1,6 @@
 name = Eloquence
 summary = Eloquence Synthesizer
-version = 0.20250420.01
+version = v10
 description = This is the eloquence synthesizer for NVDA
 author = NVDA User
 url = https://github.com/pumper42nickel/eloquence_threshold
