Derive addon version from git tags instead of hardcoding
Replace the hardcoded version in buildVars.py with a _get_version()
function that calls `git describe --tags` at build time. This makes
git tags the single source of truth for versioning — no files to edit
when releasing. Also fetch tags in CI and clean up pyproject.toml
placeholder metadata.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,8 @@
 [project]
 name = "eloquence-64"
-version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.13-32"
+version = "0.0.0"  # Not used — addon version comes from git tags via buildVars.py
+description = "Eloquence synthesizer for 64-bit NVDA"
+requires-python = ">=3.13"
 dependencies = [
     "pyinstaller>=6.17.0",
 ]
