--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,10 +55,10 @@ jobs:
         run: scons
 
       - name: Upload workflow artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v7
         with:
-          name: eloquence-addon
           path: "*.nvda-addon"
+          archive: false
 
       - name: Upload to release
         if: github.event_name == 'release'
